Initial initiative controller + converter refactor.
