# src/app.js
@@ -24,9 +24,11 @@ mongoose.connect(MONGO_URI, { useNewUrlParser: true, useUnifiedTopology: true })
 
 const usersRouter = require('./routes/tactical-game-controller');
 const charactersRouter = require('./routes/tactical-character-controller');
+const initiativeRouter = require('./routes/initiative-controller');
 
 app.use('/v1/tactical-games', usersRouter);
 app.use('/v1/characters', charactersRouter);
+app.use('/v1/initiative', initiativeRouter);
 
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
